tests/build/cases/widget/declared_prop_does_not_exist1.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `margin`
 --> cases/widget/declared_prop_does_not_exist1.rs:8:9
  |
8 |         margin = { margin: 0 };
  |         ^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
5 |     inherit!(zero_ui::core::widget_base::use zero_ui::prelude::margin;
  |                                          +++++++++++++++++++++++++++++
